--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div id="rowsContainer">
                 <div class="form-row">
                     <div class="col">
-                        <input type="text" class="form-control" value="Deposit" disabled>
+                        <input type="text" class="form-control" value="Deposit" >
                     </div>
                     <div class="col">
                         <input type="number" class="form-control" placeholder="Percentage" required>
